--- a/src/content/blog/nan.mdx
+++ b/src/content/blog/nan.mdx
@@ -1,2 +1,15 @@
+---
+title: NAN
+date: 2017-12-25
+description:
+  As I write this, it's Christmas Eve. My kids have fallen asleep and I've
+  wrapped up the last few presents I've made or purchased for them...
+meta:
+  keywords:
+    - Christmas
+    - Light The World
+bannerCloudinaryId: kentcdodds.com/content/blog/merry-christmas/banner
+bannerCredit: '[#LightTheWorld](https://www.mormon.org/christmas/25-ways-25-days)'
+---
 # mdx
 test if i understand right brcause he is sleep 
