--- a/content/blog/kent-ooo-out-of-the-office.mdx
+++ b/content/blog/kent-ooo-out-of-the-office.mdx
@@ -2,8 +2,7 @@
 archived: true
 title: Kent OOO (Out Of the Office)
 date: 2016-05-31
-description:
-  Why this week's episode of JavaScript Air is canceled and where I'm going...
+description: Why this week's episode of JavaScript Air is canceled and where I'm going...
 meta:
   keywords:
     - Tech
@@ -16,7 +15,7 @@ bannerCredit:
 ---
 
 This week's episode of [JavaScript Air](https://javascriptair.com) is canceled.
-I will be out of town and I didn't plan far enough in advance to have someone
+I will be out of town an d I didn't plan far enough in advance to have someone
 fill in for me. I've had this thing planned for several months and I only just
 realized last week that I leave before the normal show time. This also means
 that my normal
