--- a/content/blog/migrating-to-jest.mdx
+++ b/content/blog/migrating-to-jest.mdx
@@ -10,12 +10,12 @@ meta:
     - testing
     - Nodejs
 bannerCloudinaryId: unsplash/photo-1470175369463-7bb9f41e614b
-bannerCredit: '[https://unsplash.com/photos/_dwwHrYRWcM](https://unsplash.com/photos/_dwwHrYRWcM)'
+bannerCredit: "[https://unsplash.com/photos/_dwwHrYRWcM](https://unsplash.com/photos/_dwwHrYRWcM)"
 ---
 
 I get really excited about new tech I find interesting. When I first "got" the
 testing framework [AVA](https://github.com/avajs/ava), I was soooo excited. I
-was on the rooftops of twitter telling people to give AVA a shot. I created
+was on the rooftops of twitter te lling people to give AVA a shot. I created
 [two](https://youtu.be/FgjxXntElEY) [screencasts](https://youtu.be/jfWK8LMD8mw)
 about how to set up and use AVA, and a full blown workshop on how to test React
 with AVA:
