--- a/content/blog/listify-a-java-script-array.mdx
+++ b/content/blog/listify-a-java-script-array.mdx
@@ -20,11 +20,11 @@ When you want to display a list of items to a user, I'm afraid `.join(', ')`
 just won't cut it:
 
 ```js
-console.log(['apple'].join(', ')) // apple
+console.log(["apple"].join(", ")); // apple
 // looks good
-console.log(['apple', 'grape'].join(', ')) // apple, grape
+console.log(["apple", "grape"].join(", ")); // apple, grape
 // nah, I want "apple and grape"
-console.log(['apple', 'grape', 'pear'].join(', ')) // apple, grape, pear
+console.log(["apple", "grape", "pear"].join(", ")); // apple, grape, pear
 // wut?
 ```
 
@@ -37,18 +37,18 @@ Well, it's likely that this can do all you need and more. Let's take a look:
 
 ```ts
 const items = [
-  'Sojourner',
-  'Opportunity',
-  'Spirit',
-  'Curiosity',
-  'Perseverance',
-]
+  "Sojourner",
+  "Opportunity",
+  "Spirit",
+  "Curiosity",
+  "Perseverance",
+];
 
-const formatter = new Intl.ListFormat('en', {
-  style: 'long',
-  type: 'conjunction',
-})
-console.log(formatter.format(items))
+const formatter = new Intl.ListFormat("en", {
+  style: "long",
+  type: "conjunction",
+});
+console.log(formatter.format(items));
 // logs: "Sojourner, Opportunity, Spirit, Curiosity, and Perseverance"
 ```
 
@@ -84,13 +84,13 @@ locale):
 Interestingly, if we play around with the locale, things behave unexpectedly:
 
 ```js
-new Intl.ListFormat('en', {style: 'narrow', type: 'unit'}).format(items)
+new Intl.ListFormat("en", { style: "narrow", type: "unit" }).format(items);
 // Sojourner Opportunity Spirit Curiosity Perseverance
 
-new Intl.ListFormat('es', {style: 'narrow', type: 'unit'}).format(items)
+new Intl.ListFormat("es", { style: "narrow", type: "unit" }).format(items);
 // Sojourner Opportunity Spirit Curiosity Perseverance
 
-new Intl.ListFormat('de', {style: 'narrow', type: 'unit'}).format(items)
+new Intl.ListFormat("de", { style: "narrow", type: "unit" }).format(items);
 // Sojourner, Opportunity, Spirit, Curiosity und Perseverance
 ```
 
@@ -120,27 +120,27 @@ simpler. Feel free to take a whack at the for loop version though if you want.
 ```js
 function listify(
   array,
-  {conjunction = 'and ', stringify = item => item.toString()} = {},
+  { conjunction = "and ", stringify = (item) => item.toString() } = {}
 ) {
   return array.reduce((list, item, index) => {
-    if (index === 0) return stringify(item)
+    if (index === 0) return stringify(item);
     if (index === array.length - 1) {
-      if (index === 1) return `${list} ${conjunction}${stringify(item)}`
-      else return `${list}, ${conjunction}${stringify(item)}`
+      if (index === 1) return `${list} ${conjunction}${stringify(item)}`;
+      else return `${list}, ${conjunction}${stringify(item)}`;
     }
-    return `${list}, ${stringify(item)}`
-  }, '')
+    return `${list}, ${stringify(item)}`;
+  }, "");
 }
 ```
 
 In my codebase, is used like so:
 
 ```js
-const to = `To: ${listify(mentionedMembersNicknames)}`
+const to = `To: ${listify(mentionedMembersNicknames)}`;
 // and
 const didYouMean = `Did you mean ${listify(closeMatches, {
-  conjunction: 'or ',
-})}?`
+  conjunction: "or ",
+})}?`;
 ```
 
 I'd take the time to walk through this code with you, but actually **as I was
@@ -153,14 +153,14 @@ on top of the standard:
 function listify(
   array,
   {
-    type = 'conjunction',
-    style = 'long',
-    stringify = item => item.toString(),
-  } = {},
+    type = "conjunction",
+    style = "long",
+    stringify = (item) => item.toString(),
+  } = {}
 ) {
-  const stringified = array.map(item => stringify(item))
-  const formatter = new Intl.ListFormat('en', {style, type})
-  return formatter.format(stringified)
+  const stringified = array.map((item) => stringify(item));
+  const formatter = new Intl.ListFormat("en", { style, type });
+  return formatter.format(stringified);
 }
 ```
 
@@ -168,11 +168,11 @@ With that, now I do this:
 
 ```js
 // no change for the default case
-const to = `To: ${listify(mentionedMembersNicknames)}`
+const to = `To: ${listify(mentionedMembersNicknames)}`;
 // switch to using the "type" option rather than overloading/abusing the term "conjunction"
 const didYouMean = `Did you mean ${listify(closeMatches, {
-  type: 'disjunction',
-})}?`
+  type: "disjunction",
+})}?`;
 ```
 
 ## Conclusion
@@ -186,33 +186,33 @@ finished code (I'm in the process of migrating this project to TypeScript).
 // unfortunately TypeScript doesn't have Intl.ListFormat yet 😢
 // so we'll just add it ourselves:
 type ListFormatOptions = {
-  type?: 'conjunction' | 'disjunction' | 'unit'
-  style?: 'long' | 'short' | 'narrow'
-  localeMatcher?: 'lookup' | 'best fit'
-}
+  type?: "conjunction" | "disjunction" | "unit";
+  style?: "long" | "short" | "narrow";
+  localeMatcher?: "lookup" | "best fit";
+};
 declare namespace Intl {
   class ListFormat {
-    constructor(locale: string, options: ListFormatOptions)
-    public format: (items: Array<string>) => string
+    constructor(locale: string, options: ListFormatOptions);
+    public format: (items: Array<string>) => string;
   }
 }
 
 type ListifyOptions<ItemType> = {
-  type?: ListFormatOptions['type']
-  style?: ListFormatOptions['style']
-  stringify?: (item: ItemType) => string
-}
+  type?: ListFormatOptions["type"];
+  style?: ListFormatOptions["style"];
+  stringify?: (item: ItemType) => string;
+};
 function listify<ItemType>(
   array: Array<ItemType>,
   {
-    type = 'conjunction',
-    style = 'long',
-    stringify = (thing: {toString(): string}) => thing.toString(),
-  }: ListifyOptions<ItemType> = {},
+    type = "conjunction",
+    style = "long",
+    stringify = (thing: { toString(): string }) => thing.toString(),
+  }: ListifyOptions<ItemType> = {}
 ) {
-  const stringified = array.map(item => stringify(item))
-  const formatter = new Intl.ListFormat('en', {style, type})
-  return formatter.format(stringified)
+  const stringified = array.map((item) => stringify(item));
+  const formatter = new Intl.ListFormat("en", { style, type });
+  return formatter.format(stringified);
 }
 ```
 
