--- a/content/blog/kent-ooo-out-of-the-office.mdx
+++ b/content/blog/kent-ooo-out-of-the-office.mdx
@@ -45,7 +45,7 @@ worldly possessions they could fit and cary.
 
 [![Records of the Mormon pioneer handcart companies are included in the Overland Travel database](https://res.cloudinary.com/kentcdodds-com/image/upload/v1625033078/kentcdodds.com/content/blog/kent-ooo-out-of-the-office/1.jpg)](http://kuer.org/post/new-tools-looking-pioneer-ancestors)
 
-I never went on a pioneer trek when I was growing up, so I'm excited to
+I never went on pioneer trek when I was growing up, so I'm excited to
 experience this myself. While I'm out there I will have just as much access to
 modern technology as the early pioneers had: _none_.
 
