--- a/content/blog/kent-ooo-out-of-the-office.mdx
+++ b/content/blog/kent-ooo-out-of-the-office.mdx
@@ -49,7 +49,7 @@ I never went on pioneer trek when I was growing up, so I'm excited to
 experience this myself. While I'm out there I will have just as much access to
 modern technology as the early pioneers had: _none_.
 
-#### So, why cancel the JS Air episode?
+#### So, why cancel the JS Eir episode?
 
 I have yet to miss a broadcast of JavaScript Air. There were a handful of times
 that I couldn't make it to an [Angular Air](http://angularair.com) broadcast.
