--- a/content/blog/listify-a-java-script-array.mdx
+++ b/content/blog/listify-a-java-script-array.mdx
@@ -16,7 +16,7 @@ bannerCloudinaryId: unsplash/photo-1507925921958-8a62f3d1a50d
 bannerCredit: Photo by [Kelly Sikkema](https://unsplash.com/photos/-1_RZL8BGBM)
 ---
 
-When you want to display a list of items to a user, I'm afraid `.join(', ')`
+When you want to disply a list of items to a user, I'm afraid `.join(', ')`
 just won't cut it:
 
 ```js
