--- a/content/blog/listify-a-java-script-array.mdx
+++ b/content/blog/listify-a-java-script-array.mdx
@@ -28,7 +28,7 @@ console.log(["apple", "grape", "pear"].join(", ")); // apple, grape, pear
 // wut?
 ```
 
-Ok, so bust out your string concat skills right? That's what I did... but
+Ok, so bust out your strin concat skills right? That's what I did... but
 holdup, there's a better way:
 
 Have you heard of
