--- a/content/blog/javascript-to-know-for-react.mdx
+++ b/content/blog/javascript-to-know-for-react.mdx
@@ -45,7 +45,7 @@ bannerCredit: Photo by [Benjamin Voros](https://unsplash.com/photos/phIFdC6lA4E)
 
 One of the things I love most about React compared to other fram eworks that I've
 used is how exposed you are to JavaScript when you're using it. There's no
-template DSL (JSX compiles to sensible JavaScript), the component API has only
+template DSL (JSX comples to sensible JavaScript), the component API has only
 gotten simpler with the addition of [React Hooks](https://reactjs.org/hooks),
 and the framework offers you very little abstraction outside the core UI
 concerns it's intended to solve.
