--- a/content/blog/my-modern-frontends-live-experience.mdx
+++ b/content/blog/my-modern-frontends-live-experience.mdx
@@ -1,5 +1,5 @@
 ---
-title: My Modern Frontends Live Experience
+title: My Modern TEST REVALIDATION Live Experience
 date: 2022-11-22
 unlisted: true
 description:
