--- a/content/blog/javascript-to-know-for-react.mdx
+++ b/content/blog/javascript-to-know-for-react.mdx
@@ -42,7 +42,7 @@ translations:
 bannerCloudinaryId: unsplash/photo-1519681393784-d120267933ba
 bannerCredit: Photo by [Benjamin Voros](https://unsplash.com/photos/phIFdC6lA4E)
 ---
-
+hope it won't trigger auto deployment
 One of the things I love most about React compared to other fram eworks that I've
 used is how exposed you are to JavaScript when you're using it. There's no
 template DSL (JSX comples to sensible JavaScript), the component API has only
