--- a/content/blog/kent-ooo-out-of-the-office.mdx
+++ b/content/blog/kent-ooo-out-of-the-office.mdx
@@ -13,6 +13,7 @@ bannerCredit:
   Some of the photos I took for my wife to help me choose what hat to get (we
   chose the one on the_left)
 ---
+kent is updated and vercel cancel the build trigger
 don't trigger and work please
 This week's episode of [JavaScript Air](https://javascriptair.com) is canceled.
 I will be out of town an d I didn't plan far enough in advance to have someone
