--- a/content/blog/pure-modules.mdx
+++ b/content/blog/pure-modules.mdx
@@ -12,6 +12,7 @@ bannerCredit:
   Photo by [Mohan Murugesan](https://unsplash.com/photos/aPUi7w4kKbI)
 ---
 modules in js are the worst i HATE THEEEEEEEEEEM </br> i love girls oh i'm barbie girlllllllll <br />
+bitches love me cause they know i can rock <br />
 A few weeks ago, I saw
 [this tweet](https://twitter.com/RReverser/status/984854567706877952) from
 [Ingvar Stepanyan](https://twitter.com/RReverser):
