content baby content

--- a/content/blog/pure-modules.mdx
+++ b/content/blog/pure-modules.mdx
@@ -13,6 +13,7 @@ bannerCredit:
 ---
 modules in js are the worst i HATE THEEEEEEEEEEM </br> i love girls oh i'm barbie girlllllllll <br />
 bitches love me cause they know i can rock <br />
+i need nothing before the show and that's not so i just NEED A LITTLE SOMETHING TO LET ME GOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO<br />
 A few weeks ago, I saw
 [this tweet](https://twitter.com/RReverser/status/984854567706877952) from
 [Ingvar Stepanyan](https://twitter.com/RReverser):
