--- a/content/blog/pure-modules.mdx
+++ b/content/blog/pure-modules.mdx
@@ -11,9 +11,9 @@ bannerCloudinaryId: unsplash/photo-1523039918496-486825032d8a
 bannerCredit:
   Photo by [Mohan Murugesan](https://unsplash.com/photos/aPUi7w4kKbI)
 ---
-modules in js are the worst i HATE THEEEEEEEEEEM </br> i love girls oh i'm barbie girlllllllll <br />
-bitches love me cause they know i can rock <br />
-i need nothing before the show and that's not so i just NEED A LITTLE SOMETHING TO LET ME GOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO<br />
+modules in js are the worst i HATE THEEEEEEEEEEM  i love girls oh i'm barbie girlllllllll 
+bitches love me cause they know i can rock 
+i need nothing before the show and that's not so i just NEED A LITTLE SOMETHING TO LET ME GOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
 A few weeks ago, I saw
 [this tweet](https://twitter.com/RReverser/status/984854567706877952) from
 [Ingvar Stepanyan](https://twitter.com/RReverser):
