a lot of content testing

--- a/content/blog/avoid-nesting-when-youre-testing/index.mdx
+++ b/content/blog/avoid-nesting-when-youre-testing/index.mdx
@@ -6,6 +6,8 @@ description:
   unmaintainable tests and how to avoid it.
 categories:
   - testing
+  - react
+  - javascript
 meta:
   keywords:
     - testing
