--- a/content/blog/migrating-to-jest.mdx
+++ b/content/blog/migrating-to-jest.mdx
@@ -2,6 +2,11 @@
 title: Migrating to Jest
 date: 2016-11-14
 description: on the P2P team at PayPal
+categories:
+  - react
+  - developer
+  - testing
+  - javascript
 meta:
   keywords:
     - javascript
