--- a/content/blog/kent-ooo-out-of-the-office.mdx
+++ b/content/blog/kent-ooo-out-of-the-office.mdx
@@ -3,6 +3,9 @@ archived: true
 title: Kent OOO (Out Of the Office)
 date: 2016-05-31
 description: Why this week's episode of JavaScript Air is canceled and where I'm going...
+categories:
+  - react
+  - developer
 meta:
   keywords:
     - Tech
