--- a/content/blog/pure-modules.mdx
+++ b/content/blog/pure-modules.mdx
@@ -4,6 +4,10 @@ date: 2018-04-30
 description:
   How you write your ES Modules impacts the performance and maintainability of
   your code.
+categories:
+  - testing
+  - react
+  - javascript
 meta:
   keywords:
     - javascript
