--- a/content/blog/kent-ooo-out-of-the-office.mdx
+++ b/content/blog/kent-ooo-out-of-the-office.mdx
@@ -17,7 +17,7 @@ bannerCredit:
   chose the one on the_left)
 ---
 
-kent please don't trigger
+kent please don't trigger 2
 kent is updated and vercel cancel the build trigger
 don't trigger and work please
 This week's episode of [JavaScript Air](https://javascriptair.com) is canceled.
