--- a/content/blog/listify-a-java-script-array.mdx
+++ b/content/blog/listify-a-java-script-array.mdx
@@ -16,6 +16,8 @@ bannerCloudinaryId: unsplash/photo-1507925921958-8a62f3d1a50d
 bannerCredit: Photo by [Kelly Sikkema](https://unsplash.com/photos/-1_RZL8BGBM)
 ---
 
+nagy editing azzzm watching
+
 When you want to disply a list of items to a user, I'm afraid `.join(', ')`
 just won't cut it:
 
