added typescript extends article

--- a/content/blog/how-we-built-this-blog.mdx
+++ b/content/blog/how-we-built-this-blog.mdx
@@ -3,6 +3,8 @@ title: How we built this blog
 date: 2023-2-12
 description: 
     How we made a kendcdodds inspired blog with t3 stack
+bannerUrl: 
+    https://wallpaperaccess.com/full/3238251.jpg
 categories:
   - react
   - nextjs
@@ -26,7 +28,7 @@ meta:
     - trpc
     - express
 
-  bannerUrl: https://wallpaperaccess.com/full/3238251.jpg
+ 
 ---
 Like every web developer out there, we made our own personalized blog to write about tech. and here's your standard how I wrote this
 blog post, also you can find the code to the entire blog [here](https://github.com/The-Zagy/zagy-blog)
