--- a/content/blog/how-we-built-this-blog-test.mdx
+++ b/content/blog/how-we-built-this-blog-test.mdx
@@ -1,5 +1,5 @@
 ---
-title: How we built this blog
+title: How we built this blog-test
 date: 2023-2-12
 description: 
     How we made a kendcdodds inspired blog with t3 stack
