--- a/content/blog/testNew69.mdx
+++ b/content/blog/testNew69.mdx
@@ -1,5 +1,5 @@
 ---
-title: testNew 
+title: testNew69 
 bannerUrl: https://miro.medium.com/max/1144/1*LKH2Zp23UiJmDWhXysJrjw.png
 date: 2023-2-25
 description: 
